--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,28 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from pymongo import MongoClient\n",
-    "from config import *\n",
-    "import utils\n",
     "from tqdm import tqdm\n",
-    "from datetime import datetime\n",
-    "import db_utils\n",
-    "from bson.objectid import ObjectId\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "from db_utils import init_and_connect\n",
+    "import pandas as pd\n",
+    "\n",
+    "from settings import Settings\n",
+    "\n",
+    "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to MongoDB\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -47,11 +61,10 @@
     }
    ],
    "source": [
-    "client = MongoClient(f\"mongodb+srv://{DB_USER}:{DB_PASSWORD}@{DB_URL}/?retryWrites=true&w=majority\")\n",
+    "load_dotenv()\n",
     "\n",
-    "db = client[DB_NAME]\n",
-    "\n",
-    "db_utils.init(db)"
+    "settings = Settings()\n",
+    "db = init_and_connect(settings)"
    ]
   },
   {
@@ -60,17 +73,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_bookings = list(db.course_bookings.find({\n",
-    "    \"available\": True,\n",
-    "}))\n",
+    "db_bookings = list(\n",
+    "    db.course_bookings.find(\n",
+    "        {\n",
+    "            \"available\": True,\n",
+    "        }\n",
+    "    )\n",
+    ")\n",
     "\n",
-    "db_schedules = list(db.course_schedules.find({\n",
-    "    \"available\": True,\n",
-    "}))\n",
+    "db_schedules = list(\n",
+    "    db.course_schedules.find(\n",
+    "        {\n",
+    "            \"available\": True,\n",
+    "        }\n",
+    "    )\n",
+    ")\n",
     "\n",
-    "db_rooms = list(db.rooms.find({\n",
-    "    \"available\": True,\n",
-    "}))\n"
+    "db_rooms = list(\n",
+    "    db.rooms.find(\n",
+    "        {\n",
+    "            \"available\": True,\n",
+    "        }\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -95,14 +120,13 @@
     "        if schedule[\"_id\"] == schedule_id:\n",
     "            booking[\"schedule\"] = schedule\n",
     "            break\n",
-    "    \n",
+    "\n",
     "    room_id = booking[\"room_id\"]\n",
     "\n",
     "    for room in db_rooms:\n",
     "        if room[\"_id\"] == room_id:\n",
     "            booking[\"room\"] = room\n",
-    "            break\n",
-    "\n"
+    "            break"
    ]
   },
   {
@@ -116,14 +140,16 @@
     "    schedule = booking[\"schedule\"]\n",
     "    room = booking[\"room\"]\n",
     "\n",
-    "    data.append({\n",
-    "        \"course_id\": schedule[\"course_id\"],\n",
-    "        \"label\": schedule[\"label\"],\n",
-    "        \"start_datetime\": schedule[\"start_datetime\"],\n",
-    "        \"end_datetime\": schedule[\"end_datetime\"],\n",
-    "        \"room_capacity\": room[\"capacity\"] if \"capacity\" in room else None,\n",
-    "        \"room_name\": room[\"name\"],\n",
-    "    })"
+    "    data.append(\n",
+    "        {\n",
+    "            \"course_id\": schedule[\"course_id\"],\n",
+    "            \"label\": schedule[\"label\"],\n",
+    "            \"start_datetime\": schedule[\"start_datetime\"],\n",
+    "            \"end_datetime\": schedule[\"end_datetime\"],\n",
+    "            \"room_capacity\": room[\"capacity\"] if \"capacity\" in room else None,\n",
+    "            \"room_name\": room[\"name\"],\n",
+    "        }\n",
+    "    )"
    ]
   },
   {
@@ -190,9 +216,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_courses = list(db.courses.find({\n",
-    "    \"available\": True,\n",
-    "}))"
+    "db_courses = list(\n",
+    "    db.courses.find(\n",
+    "        {\n",
+    "            \"available\": True,\n",
+    "        }\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -206,6 +236,7 @@
     "        if course[\"_id\"] == course_id:\n",
     "            return course[\"name\"]\n",
     "    return None\n",
+    "\n",
     "\n",
     "def get_course_code(course_id, db_courses):\n",
     "    for course in db_courses:\n",
@@ -259,9 +290,9 @@
    "outputs": [],
    "source": [
     "# find the total capacity per schedule per course (schedule can be multiple rooms at the same time)\n",
-    "total_capacity_per_schedule_per_course = df.groupby([\"course_code\", \"start_datetime\", \"end_datetime\"]).agg({\n",
-    "    \"room_capacity\": \"sum\"\n",
-    "})"
+    "total_capacity_per_schedule_per_course = df.groupby(\n",
+    "    [\"course_code\", \"start_datetime\", \"end_datetime\"]\n",
+    ").agg({\"room_capacity\": \"sum\"})"
    ]
   },
   {
@@ -271,12 +302,12 @@
    "outputs": [],
    "source": [
     "# find the max and min capacity per course\n",
-    "max_capacity_per_course = total_capacity_per_schedule_per_course.groupby(\"course_code\").agg({\n",
-    "    \"room_capacity\": \"max\"\n",
-    "})\n",
-    "min_capacity_per_course = total_capacity_per_schedule_per_course.groupby(\"course_code\").agg({\n",
-    "    \"room_capacity\": \"min\"\n",
-    "})"
+    "max_capacity_per_course = total_capacity_per_schedule_per_course.groupby(\n",
+    "    \"course_code\"\n",
+    ").agg({\"room_capacity\": \"max\"})\n",
+    "min_capacity_per_course = total_capacity_per_schedule_per_course.groupby(\n",
+    "    \"course_code\"\n",
+    ").agg({\"room_capacity\": \"min\"})"
    ]
   },
   {
@@ -285,7 +316,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = pd.merge(max_capacity_per_course, min_capacity_per_course, on=\"course_code\", suffixes=(\"_max\", \"_min\")).reset_index(drop=False)"
+    "results = pd.merge(\n",
+    "    max_capacity_per_course,\n",
+    "    min_capacity_per_course,\n",
+    "    on=\"course_code\",\n",
+    "    suffixes=(\"_max\", \"_min\"),\n",
+    ").reset_index(drop=False)"
    ]
   },
   {
@@ -294,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "courses_with_participants = pd.read_csv(\"courses_with_participants.csv\")\n"
+    "courses_with_participants = pd.read_csv(\"courses_with_participants.csv\")"
    ]
   },
   {
@@ -304,7 +340,13 @@
    "outputs": [],
    "source": [
     "# populate results with participants (or none if not found)\n",
-    "results[\"participants\"] = results[\"course_code\"].apply(lambda x: courses_with_participants[courses_with_participants[\"course_code\"] == x][\"participants\"].values[0] if x in courses_with_participants[\"course_code\"].values else None)"
+    "results[\"participants\"] = results[\"course_code\"].apply(\n",
+    "    lambda x: courses_with_participants[courses_with_participants[\"course_code\"] == x][\n",
+    "        \"participants\"\n",
+    "    ].values[0]\n",
+    "    if x in courses_with_participants[\"course_code\"].values\n",
+    "    else None\n",
+    ")"
    ]
   },
   {
@@ -314,8 +356,12 @@
    "outputs": [],
    "source": [
     "# compute the percentage of capacity used for min and max\n",
-    "results[\"percentage_capacity_used_min\"] = results[\"participants\"] / results[\"room_capacity_min\"]\n",
-    "results[\"percentage_capacity_used_max\"] = results[\"participants\"] / results[\"room_capacity_max\"]"
+    "results[\"percentage_capacity_used_min\"] = (\n",
+    "    results[\"participants\"] / results[\"room_capacity_min\"]\n",
+    ")\n",
+    "results[\"percentage_capacity_used_max\"] = (\n",
+    "    results[\"participants\"] / results[\"room_capacity_max\"]\n",
+    ")"
    ]
   },
   {
@@ -334,40 +380,41 @@
    "outputs": [],
    "source": [
     "# Add day of the week\n",
-    "df['day_of_week'] = df['start_datetime'].dt.day_name()"
+    "df[\"day_of_week\"] = df[\"start_datetime\"].dt.day_name()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/nb/xkb6gsv52xq9t6plg99f32v80000gn/T/ipykernel_5650/3376689256.py:6: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-      "  hours = pd.date_range(start=row['start_datetime'], end=row['end_datetime'], freq='H').hour\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# filter for a standard week (feb 26th 2024 to march 3rd 2024)\n",
-    "week_df = df[(df['start_datetime'] >= '2024-02-26') & (df['start_datetime'] < '2024-03-03')]\n",
+    "week_df = df[\n",
+    "    (df[\"start_datetime\"] >= \"2024-02-26\") & (df[\"start_datetime\"] < \"2024-03-03\")\n",
+    "]\n",
+    "\n",
     "\n",
     "# Assuming start and end times are on the same day\n",
     "def expand_hours(row):\n",
-    "    hours = pd.date_range(start=row['start_datetime'], end=row['end_datetime'], freq='H').hour\n",
-    "    return [(row['day_of_week'], h, row['room_capacity']) for h in hours]\n",
+    "    hours = (\n",
+    "        pd.date_range(start=row[\"start_datetime\"], end=row[\"end_datetime\"], freq=\"H\")\n",
+    "        .to_series()\n",
+    "        .dt.hour.tolist()\n",
+    "    )\n",
+    "    return [(row[\"day_of_week\"], h, row[\"room_capacity\"]) for h in hours]\n",
     "\n",
-    "# Apply the function and explode the dataframe \n",
+    "\n",
+    "# Apply the function and explode the dataframe\n",
     "hourly_capacity = week_df.apply(expand_hours, axis=1).explode().tolist()\n",
     "\n",
     "# Convert the list to a dataframe\n",
-    "hourly_capacity_df = pd.DataFrame(hourly_capacity, columns=['Day', 'Hour', 'Capacity'])\n",
+    "hourly_capacity_df = pd.DataFrame(hourly_capacity, columns=[\"Day\", \"Hour\", \"Capacity\"])\n",
     "\n",
     "# Group by day and hour, summing up the capacities\n",
-    "total_capacity_per_hour = hourly_capacity_df.groupby(['Day', 'Hour']).sum().reset_index()\n"
+    "total_capacity_per_hour = (\n",
+    "    hourly_capacity_df.groupby([\"Day\", \"Hour\"]).sum().reset_index()\n",
+    ")"
    ]
   },
   {
@@ -392,8 +439,8 @@
     "import seaborn as sns\n",
     "\n",
     "plt.figure(figsize=(15, 8))\n",
-    "sns.lineplot(data=total_capacity_per_hour, x='Hour', y='Capacity', hue='Day')\n",
-    "plt.title('Total Capacity per hour')\n",
+    "sns.lineplot(data=total_capacity_per_hour, x=\"Hour\", y=\"Capacity\", hue=\"Day\")\n",
+    "plt.title(\"Total Capacity per hour\")\n",
     "plt.show()"
    ]
   },
@@ -551,8 +598,12 @@
     }
    ],
    "source": [
-    "print(f'Old {old_courses_with_participants[\"participants\"].isna().sum()}/{len(old_courses_with_participants)}')\n",
-    "print(f'New {courses_with_participants[\"participants\"].isna().sum()}/{len(courses_with_participants)}')"
+    "print(\n",
+    "    f\"Old {old_courses_with_participants['participants'].isna().sum()}/{len(old_courses_with_participants)}\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"New {courses_with_participants['participants'].isna().sum()}/{len(courses_with_participants)}\"\n",
+    ")"
    ]
   },
   {
@@ -562,7 +613,19 @@
    "outputs": [],
    "source": [
     "# fill nan values with the new dataset (if old is nan and new is not)\n",
-    "old_courses_with_participants[\"participants\"] = old_courses_with_participants.apply(lambda row: courses_with_participants[courses_with_participants[\"course_code\"] == row[\"course_code\"]][\"participants\"].values[0] if pd.isna(row[\"participants\"]) and not pd.isna(courses_with_participants[courses_with_participants[\"course_code\"] == row[\"course_code\"]][\"participants\"].values[0]) else row[\"participants\"], axis=1)"
+    "old_courses_with_participants[\"participants\"] = old_courses_with_participants.apply(\n",
+    "    lambda row: courses_with_participants[\n",
+    "        courses_with_participants[\"course_code\"] == row[\"course_code\"]\n",
+    "    ][\"participants\"].values[0]\n",
+    "    if pd.isna(row[\"participants\"])\n",
+    "    and not pd.isna(\n",
+    "        courses_with_participants[\n",
+    "            courses_with_participants[\"course_code\"] == row[\"course_code\"]\n",
+    "        ][\"participants\"].values[0]\n",
+    "    )\n",
+    "    else row[\"participants\"],\n",
+    "    axis=1,\n",
+    ")"
    ]
   },
   {
@@ -605,51 +668,58 @@
     "\n",
     "cookie = \"\"\"_ga=GA1.1.327076087.1704497679; _ga_G365HJ4XFJ=GS1.1.1709644754.48.1.1709644761.0.0.0; MoodleSession=1v6be9920dln6k02gaioqa9q5j; MOODLEID1_=%25F5gr%2519%25D0c; AVIHTTPCOOKIE=0250707b82-8f91-41ACXfovbCN-KG0861HwSOazjhVRJM6MAUcke-MkpjLmEkqAnGz4NKPvxuXIoaw07_ifc; _ga_BH7LNYWR52=GS1.1.1709574496.7.0.1709574496.0.0.0; _ga_N6BF9H5G73=GS1.1.1709573674.59.0.1709573717.0.0.0; _ga_TM8N3HCMRH=GS1.2.1709573672.57.1.1709573674.0.0.0; _gid=GA1.2.1072110967.1709548615; _ga_WM9F2S83X0=GS1.1.1709562384.2.0.1709562386.0.0.0; _ga_MWT7D7P44V=GS1.1.1709562384.20.0.1709562384.0.0.0; _ga_E9R3EEVC8Q=GS1.2.1709553245.11.1.1709553249.0.0.0; _ga_8Z5GJB4ZJ5=GS1.1.1709296345.3.0.1709296345.0.0.0; _ga_TM8DEKLSZY=GS1.1.1709051122.4.1.1709051146.0.0.0; _ga_YJ6W6YYLQE=GS1.2.1708471203.2.0.1708471203.0.0.0; _ga_7G32YGJ4WS=GS1.1.1708443555.5.1.1708443619.0.0.0; _ga_2BGFE0Z1RT=GS1.1.1708363220.2.1.1708363401.60.0.2033304422; _ga_H0J1FCYCDJ=GS1.1.1708357054.1.0.1708357056.0.0.0; _ga_Z0TVSR8E94=GS1.1.1708263424.1.0.1708263432.0.0.0; _ga_GBVBTHC8QT=GS1.1.1707847074.2.1.1707848329.0.0.0; _ga_9G5MJW6PD9=GS1.1.1707842000.1.0.1707842007.0.0.0; _ga_NP2GD2L6ES=GS1.1.1707842000.1.0.1707842007.0.0.0; _ga_0954257HWG=GS1.1.1706617682.2.0.1706617682.0.0.0; _ga_REE6RQXRF5=GS1.1.1706617682.2.0.1706617682.0.0.0; _ga_T22HJJ0372=GS1.1.1706197612.4.1.1706198469.0.0.0; _ga_1XLT6CXS52=GS1.1.1705683492.1.1.1705683534.0.0.0; _ga_C0NGVJ6J1N=GS1.1.1705683478.1.1.1705683492.0.0.0; _ga_SH0469YBLK=GS1.1.1705674861.1.1.1705674918.0.0.0; _ga_ZWWCJVDX42=GS1.1.1705674861.1.1.1705674918.0.0.0; _ga_RFXRNEMNFJ=GS1.1.1705514594.1.0.1705514599.0.0.0; _ga_4HV8LPT5CM=GS1.2.1705504196.1.1.1705504225.0.0.0; petitpois=dismiss; logged_out_marketing_header_id=eyJfcmFpbHMiOnsibWVzc2FnZSI6IklqRTNOV0kzT0RJeExXRTBPRGt0TkRWaU9DMWhZbVZsTFRReVpqYzVOR0U1WTJGbVlTST0iLCJleHAiOm51bGwsInB1ciI6ImNvb2tpZS5sb2dnZWRfb3V0X21hcmtldGluZ19oZWFkZXJfaWQifX0%3D--d63977aa68e6321ed3223be2be2b29b4b3b07a0f\"\"\"\n",
     "session_key = \"Yy0p6OjLDE\"\n",
+    "\n",
+    "\n",
     "def request_course(courseid):\n",
     "    url = f\"https://moodle.epfl.ch/lib/ajax/service.php?sesskey={session_key}&info=core_table_get_dynamic_table_content\"\n",
     "\n",
     "    headers = {\n",
-    "        'Accept': 'application/json, text/javascript, */*; q=0.01',\n",
-    "        'Accept-Encoding': 'gzip, deflate, br',\n",
-    "        'Accept-Language': 'en-GB,en;q=0.9',\n",
-    "        'Connection': 'keep-alive',\n",
-    "        'Content-Type': 'application/json',\n",
+    "        \"Accept\": \"application/json, text/javascript, */*; q=0.01\",\n",
+    "        \"Accept-Encoding\": \"gzip, deflate, br\",\n",
+    "        \"Accept-Language\": \"en-GB,en;q=0.9\",\n",
+    "        \"Connection\": \"keep-alive\",\n",
+    "        \"Content-Type\": \"application/json\",\n",
     "        \"Cookie\": cookie,\n",
-    "        'Host': \"moodle.epfl.ch\",\n",
+    "        \"Host\": \"moodle.epfl.ch\",\n",
     "        \"Origin\": \"https://moodle.epfl.ch\",\n",
     "        \"Referer\": \"https://moodle.epfl.ch/user/index.php?id=15769\",\n",
     "        \"Sec-Fetch-Dest\": \"empty\",\n",
     "        \"Sec-Fetch-Mode\": \"cors\",\n",
     "        \"Sec-Fetch-Site\": \"same-origin\",\n",
     "        \"User-Agent\": \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/17.2.1 Safari/605.1.15\",\n",
-    "        \"X-Requested-With\": \"XMLHttpRequest\"\n",
+    "        \"X-Requested-With\": \"XMLHttpRequest\",\n",
     "    }\n",
     "\n",
-    "    r = requests.post(url, headers=headers, json=[{\n",
-    "        \"index\":0,\n",
-    "        \"methodname\":\"core_table_get_dynamic_table_content\",\n",
-    "        \"args\": {\n",
-    "            \"component\":\"core_user\",\n",
-    "            \"handler\":\"participants\",\n",
-    "            \"uniqueid\":\"user-index-participants-15769\",\n",
-    "            \"sortdata\":[{\n",
-    "                \"sortby\":\"lastname\",\n",
-    "                \"sortorder\":4\n",
-    "            }],\n",
-    "            \"jointype\":2,\n",
-    "            \"filters\":{\n",
-    "                \"courseid\":{\n",
-    "                    \"name\":\"courseid\",\"jointype\":1,\"values\":[15769]\n",
-    "                }\n",
-    "            },\n",
-    "            \"firstinitial\":\"A\",\n",
-    "            \"lastinitial\":\"\",\n",
-    "            \"pagenumber\":\"1\",\n",
-    "            \"pagesize\":\"20\",\n",
-    "            \"hiddencolumns\":[],\n",
-    "            \"resetpreferences\":False\n",
-    "    }\n",
-    "        }])\n",
+    "    r = requests.post(\n",
+    "        url,\n",
+    "        headers=headers,\n",
+    "        json=[\n",
+    "            {\n",
+    "                \"index\": 0,\n",
+    "                \"methodname\": \"core_table_get_dynamic_table_content\",\n",
+    "                \"args\": {\n",
+    "                    \"component\": \"core_user\",\n",
+    "                    \"handler\": \"participants\",\n",
+    "                    \"uniqueid\": \"user-index-participants-15769\",\n",
+    "                    \"sortdata\": [{\"sortby\": \"lastname\", \"sortorder\": 4}],\n",
+    "                    \"jointype\": 2,\n",
+    "                    \"filters\": {\n",
+    "                        \"courseid\": {\n",
+    "                            \"name\": \"courseid\",\n",
+    "                            \"jointype\": 1,\n",
+    "                            \"values\": [15769],\n",
+    "                        }\n",
+    "                    },\n",
+    "                    \"firstinitial\": \"A\",\n",
+    "                    \"lastinitial\": \"\",\n",
+    "                    \"pagenumber\": \"1\",\n",
+    "                    \"pagesize\": \"20\",\n",
+    "                    \"hiddencolumns\": [],\n",
+    "                    \"resetpreferences\": False,\n",
+    "                },\n",
+    "            }\n",
+    "        ],\n",
+    "    )\n",
     "\n",
     "    return r"
    ]
@@ -663,11 +733,10 @@
     "# extract all td elements from the response\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "def extract_participants(r):\n",
-    "    soup = BeautifulSoup(r.text, 'html.parser')\n",
-    "    return soup.find_all(\"tr\")\n",
     "\n",
-    "    "
+    "def extract_participants(r):\n",
+    "    soup = BeautifulSoup(r.text, \"html.parser\")\n",
+    "    return soup.find_all(\"tr\")"
    ]
   },
   {
@@ -723,7 +792,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "occupancy-scraper (3.12.9)",
    "language": "python",
    "name": "python3"
   },
@@ -737,7 +806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
