--- a/update_meetings.ipynb
+++ b/update_meetings.ipynb
@@ -2,27 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "from pymongo import MongoClient\n",
-    "from config import *\n",
-    "import utils\n",
-    "from tqdm import tqdm\n",
+    "from utils import (\n",
+    "    parse_all_rooms_events,\n",
+    "    populate_events_room,\n",
+    "    create_event_bookings,\n",
+    "    parse_room_events,\n",
+    ")\n",
+    "\n",
     "from datetime import datetime, timedelta\n",
-    "import db_utils\n",
-    "from bson.objectid import ObjectId\n",
-    "import json"
+    "from db_utils import init_and_connect\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "from settings import Settings\n",
+    "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -48,11 +52,10 @@
     }
    ],
    "source": [
-    "client = MongoClient(f\"mongodb+srv://{DB_USER}:{DB_PASSWORD}@{DB_URL}/?retryWrites=true&w=majority\")\n",
+    "load_dotenv()\n",
     "\n",
-    "db = client[DB_NAME]\n",
-    "\n",
-    "db_utils.init(db)"
+    "settings = Settings()\n",
+    "db = init_and_connect(settings)"
    ]
   },
   {
@@ -66,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2075,7 +2078,7 @@
     "start_date = start_datetime.strftime(\"%Y-%m-%dT%H:%M:%S\")\n",
     "end_date = end_datetime.strftime(\"%Y-%m-%dT%H:%M:%S\")\n",
     "\n",
-    "new_events = utils.parse_all_rooms_events(available_rooms, start_date, end_date)"
+    "new_events = parse_all_rooms_events(available_rooms, start_date, end_date)"
    ]
   },
   {
@@ -2100,7 +2103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2115,7 @@
     }
    ],
    "source": [
-    "new_events_with_rooms = utils.populate_events_room(db, new_events)"
+    "new_events_with_rooms = populate_events_room(db, new_events)"
    ]
   },
   {
@@ -2137,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2163,12 +2166,12 @@
     }
    ],
    "source": [
-    "utils.create_event_bookings(db, new_events_with_rooms)"
+    "create_event_bookings(db, new_events_with_rooms)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2190,12 +2193,12 @@
     }
    ],
    "source": [
-    "utils.parse_room_events('BC07-08', \"2024-08-26T00:00:00\", \"2024-09-01T00:00:00\")"
+    "parse_room_events(\"BC07-08\", \"2024-08-26T00:00:00\", \"2024-09-01T00:00:00\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2217,12 +2220,12 @@
     }
    ],
    "source": [
-    "utils.parse_room_events('BC07-08', \"2024-08-26T00:00:00\", \"2024-09-01T00:00:00\")"
+    "parse_room_events(\"BC07-08\", \"2024-08-26T00:00:00\", \"2024-09-01T00:00:00\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2244,7 +2247,7 @@
     }
    ],
    "source": [
-    "utils.parse_room_events('BC01', \"2024-02-26T00:00:00\", \"2024-08-31T00:00:00\")"
+    "parse_room_events(\"BC01\", \"2024-02-26T00:00:00\", \"2024-08-31T00:00:00\")"
    ]
   },
   {
