--- a/update_courses.ipynb
+++ b/update_courses.ipynb
@@ -2,24 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyproj'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mload_ext\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mautoreload\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      2\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mautoreload\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33m2\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m parse_all_courses, filter_duplicates_courses, create_courses, create_teachers, add_teachers_to_courses, create_new_semester, create_units, create_studyplans, create_planned_in\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdatetime\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m datetime\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdb_utils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m init_and_connect\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/occupancy-scraper/utils.py:11\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrequests\u001b[39;00m\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mbs4\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m BeautifulSoup\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpyproj\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Transformer \u001b[38;5;28;01mas\u001b[39;00m pyproj_Transformer\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtqdm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m tqdm\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mconfig\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m     15\u001b[39m     MAP_PROMOS_LONG,\n\u001b[32m     16\u001b[39m     MAP_ROOMS,\n\u001b[32m   (...)\u001b[39m\u001b[32m     19\u001b[39m     ROOMS_FILTER,\n\u001b[32m     20\u001b[39m )\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pyproj'"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from pymongo import MongoClient\n",
-    "from config import *\n",
-    "import utils\n",
-    "from tqdm import tqdm\n",
+    "from utils import (\n",
+    "    parse_all_courses,\n",
+    "    filter_duplicates_courses,\n",
+    "    create_courses,\n",
+    "    create_teachers,\n",
+    "    add_teachers_to_courses,\n",
+    "    create_new_semester,\n",
+    "    create_units,\n",
+    "    create_studyplans,\n",
+    "    create_planned_in,\n",
+    ")\n",
     "from datetime import datetime\n",
-    "import db_utils\n",
-    "from bson.objectid import ObjectId"
+    "from db_utils import init_and_connect\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "from settings import Settings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -45,16 +75,14 @@
     }
    ],
    "source": [
-    "client = MongoClient(f\"mongodb+srv://{DB_USER}:{DB_PASSWORD}@{DB_URL}/?retryWrites=true&w=majority\")\n",
-    "\n",
-    "db = client[DB_NAME]\n",
-    "\n",
-    "db_utils.init(db)"
+    "load_dotenv()\n",
+    "settings = Settings()\n",
+    "db = init_and_connect(settings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -103,16 +131,7 @@
    ],
    "source": [
     "# Parse all courses\n",
-    "courses = utils.parse_all_courses()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unique_courses = utils.filter_duplicates_courses(courses)"
+    "courses = parse_all_courses()"
    ]
   },
   {
@@ -121,7 +140,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#course = utils.parse_course(\"https://edu.epfl.ch/studyplan/fr/master/data-science/coursebook/foundations-of-data-science-COM-406\")"
+    "unique_courses = filter_duplicates_courses(courses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# course = parse_course(\"https://edu.epfl.ch/studyplan/fr/master/data-science/coursebook/foundations-of-data-science-COM-406\")"
    ]
   },
   {
@@ -162,7 +190,7 @@
     }
    ],
    "source": [
-    "utils.create_courses(db, unique_courses)"
+    "create_courses(db, unique_courses)"
    ]
   },
   {
@@ -203,7 +231,7 @@
     }
    ],
    "source": [
-    "utils.create_teachers(db, unique_courses)"
+    "create_teachers(db, unique_courses)"
    ]
   },
   {
@@ -229,12 +257,12 @@
     }
    ],
    "source": [
-    "utils.add_teachers_to_courses(db, unique_courses)"
+    "add_teachers_to_courses(db, unique_courses)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +278,7 @@
     "#     datetime(2024, 5, 20),\n",
     "# ]\n",
     "\n",
-    "# utils.create_new_semester(db,\n",
+    "# create_new_semester(db,\n",
     "#     name=\"Semestre d'automne 2023-2024\",\n",
     "#     start_date=datetime(2023, 9, 18),\n",
     "#     end_date=datetime(2023, 12, 22),\n",
@@ -259,7 +287,7 @@
     "#     available=True\n",
     "# )\n",
     "\n",
-    "# utils.create_new_semester(db,\n",
+    "# create_new_semester(db,\n",
     "#     name=\"Semestre de printemps 2023-2024\",\n",
     "#     start_date=datetime(2024, 2, 19),\n",
     "#     end_date=datetime(2024, 5, 31),\n",
@@ -268,7 +296,7 @@
     "#     available=True\n",
     "# )\n",
     "\n",
-    "# utils.create_new_semester(db,\n",
+    "# create_new_semester(db,\n",
     "#     name=\"2023-2024\",\n",
     "#     start_date=datetime(2024, 9, 1),\n",
     "#     end_date=datetime(2024, 8, 30),\n",
@@ -278,73 +306,74 @@
     "# )\n",
     "\n",
     "# Fall 2024-2025\n",
-        "# skip_dates = [\n",
-        "#     datetime(2024, 9, 16),\n",
-        "#     datetime(2024, 10, 21),\n",
-        "#     datetime(2024, 10, 22),\n",
-        "#     datetime(2024, 10, 23),\n",
-        "#     datetime(2024, 10, 24),\n",
-        "#     datetime(2024, 10, 25),\n",
-        "#     datetime(2025, 4, 18),\n",
-        "#     datetime(2025, 4, 21),\n",
-        "#     datetime(2025, 4, 22),\n",
-        "#     datetime(2025, 4, 23),\n",
-        "#     datetime(2025, 4, 24),\n",
-        "#     datetime(2025, 4, 25),\n",
-        "#     datetime(2025, 5, 29),\n",
-        "# ]\n",
-        "\n",
-        "# utils.create_new_semester(db,\n",
-        "#     name=\"Semestre d'automne 2024-2025\",\n",
-        "#     start_date=datetime(2024, 9, 16),\n",
-        "#     end_date=datetime(2024, 12, 22),\n",
-        "#     skip_dates=skip_dates,\n",
-        "#     type=\"fall\",\n",
-        "#     available=True\n",
-        "# )\n",
-        "\n",
-        "# utils.create_new_semester(db,\n",
-        "#     name=\"Semestre de printemps 2024-2025\",\n",
-        "#     start_date=datetime(2025, 2, 17),\n",
-        "#     end_date=datetime(2025, 6, 1),\n",
-        "#     skip_dates=skip_dates,\n",
-        "#     type=\"spring\",\n",
-        "#     available=True\n",
-        "# )\n",
-        "\n",
-        "# utils.create_new_semester(db,\n",
-        "#     name=\"2024-2025\",\n",
-        "#     start_date=datetime(2024, 9, 9),\n",
-        "#     end_date=datetime(2025, 6, 1),\n",
-        "#     skip_dates=skip_dates,\n",
-        "#     type=\"year\",\n",
-        "#     available=True\n",
-        "# )\n",
-        "\n",
-        "\n",
-        "# Fall 2025-2026\n",
-        "skip_dates = [\n",
-        "    datetime(2025, 9, 22),\n",
-        "    datetime(2025, 10, 20),\n",
-        "    datetime(2025, 10, 21),\n",
-        "    datetime(2025, 10, 22),\n",
-        "    datetime(2025, 10, 23),\n",
-        "    datetime(2025, 10, 24),\n",
-        "]\n",
-        "\n",
-        "utils.create_new_semester(db,\n",
-        "    name=\"Semestre d'automne 2025-2026\",\n",
-        "    start_date=datetime(2025, 9, 15),\n",
-        "    end_date=datetime(2025, 12, 21),\n",
-        "    skip_dates=skip_dates,\n",
-        "    type=\"fall\",\n",
-        "    available=True\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "code",
-   "execution_count": 5,
+    "# skip_dates = [\n",
+    "#     datetime(2024, 9, 16),\n",
+    "#     datetime(2024, 10, 21),\n",
+    "#     datetime(2024, 10, 22),\n",
+    "#     datetime(2024, 10, 23),\n",
+    "#     datetime(2024, 10, 24),\n",
+    "#     datetime(2024, 10, 25),\n",
+    "#     datetime(2025, 4, 18),\n",
+    "#     datetime(2025, 4, 21),\n",
+    "#     datetime(2025, 4, 22),\n",
+    "#     datetime(2025, 4, 23),\n",
+    "#     datetime(2025, 4, 24),\n",
+    "#     datetime(2025, 4, 25),\n",
+    "#     datetime(2025, 5, 29),\n",
+    "# ]\n",
+    "\n",
+    "# create_new_semester(db,\n",
+    "#     name=\"Semestre d'automne 2024-2025\",\n",
+    "#     start_date=datetime(2024, 9, 16),\n",
+    "#     end_date=datetime(2024, 12, 22),\n",
+    "#     skip_dates=skip_dates,\n",
+    "#     type=\"fall\",\n",
+    "#     available=True\n",
+    "# )\n",
+    "\n",
+    "# create_new_semester(db,\n",
+    "#     name=\"Semestre de printemps 2024-2025\",\n",
+    "#     start_date=datetime(2025, 2, 17),\n",
+    "#     end_date=datetime(2025, 6, 1),\n",
+    "#     skip_dates=skip_dates,\n",
+    "#     type=\"spring\",\n",
+    "#     available=True\n",
+    "# )\n",
+    "\n",
+    "# create_new_semester(db,\n",
+    "#     name=\"2024-2025\",\n",
+    "#     start_date=datetime(2024, 9, 9),\n",
+    "#     end_date=datetime(2025, 6, 1),\n",
+    "#     skip_dates=skip_dates,\n",
+    "#     type=\"year\",\n",
+    "#     available=True\n",
+    "# )\n",
+    "\n",
+    "\n",
+    "# Fall 2025-2026\n",
+    "skip_dates = [\n",
+    "    datetime(2025, 9, 22),\n",
+    "    datetime(2025, 10, 20),\n",
+    "    datetime(2025, 10, 21),\n",
+    "    datetime(2025, 10, 22),\n",
+    "    datetime(2025, 10, 23),\n",
+    "    datetime(2025, 10, 24),\n",
+    "]\n",
+    "\n",
+    "create_new_semester(\n",
+    "    db,\n",
+    "    name=\"Semestre d'automne 2025-2026\",\n",
+    "    start_date=datetime(2025, 9, 15),\n",
+    "    end_date=datetime(2025, 12, 21),\n",
+    "    skip_dates=skip_dates,\n",
+    "    type=\"fall\",\n",
+    "    available=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -380,12 +409,12 @@
     }
    ],
    "source": [
-    "utils.create_units(db, unique_courses)"
+    "create_units(db, unique_courses)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -401,12 +430,12 @@
     }
    ],
    "source": [
-    "utils.create_studyplans(db, unique_courses)"
+    "create_studyplans(db, unique_courses)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +473,7 @@
     }
    ],
    "source": [
-    "utils.create_planned_in(db, unique_courses)"
+    "create_planned_in(db, unique_courses)"
    ]
   },
   {
@@ -457,7 +486,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "occupancy-scraper (3.12.9)",
    "language": "python",
    "name": "python3"
   },
@@ -471,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
