--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -28,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +40,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- DB initialized -- \n"
+      "-- DB initialized -- \n",
+      "Database(MongoClient(host=['cluster0-shard-00-01.ox8kx.mongodb.net:27017', 'cluster0-shard-00-00.ox8kx.mongodb.net:27017', 'cluster0-shard-00-02.ox8kx.mongodb.net:27017'], document_class=dict, tz_aware=False, connect=True, retrywrites=True, w='majority', authsource='admin', replicaset='atlas-feodsg-shard-0', tls=True), 'occupancy-epfl-prod')\n"
      ]
     },
     {
@@ -64,7 +56,29 @@
     "load_dotenv()\n",
     "\n",
     "settings = Settings()\n",
-    "db = init_and_connect(settings)"
+    "db = init_and_connect(settings)\n",
+    "\n",
+    "print(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeleteResult({'n': 13317, 'electionId': ObjectId('7fffffff00000000000006b8'), 'opTime': {'ts': Timestamp(1759333147, 1352), 't': 1720}, 'ok': 1.0, '$clusterTime': {'clusterTime': Timestamp(1759333147, 1352), 'signature': {'hash': b'\\xf2\\x08Z\\xb2\\xaaC\\xb1\\x95bRj\\xef\\xee\\\\\\xcas_^7\\xc3', 'keyId': 7494700034391277776}}, 'operationTime': Timestamp(1759333147, 1352)}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.planned_in.delete_many({})"
    ]
   },
   {
